Fix z-index del resultado de busqueda con quien compartir

--- a/web/bundles/dodicifansworldweb/less/token-input/token-input-fansworld.less
+++ b/web/bundles/dodicifansworldweb/less/token-input/token-input-fansworld.less
@@ -81,7 +81,7 @@ div.token-input-dropdown-fansworld {
     .border-radius(3px);
     cursor: default;
     font-size: 11px;
-    z-index: 1;
+    z-index: 99999999;
 }
 
 div.token-input-dropdown-fansworld p {
